--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,10 @@ body {
   box-shadow: 0 0 30px #9a76ff;
 }
 
+.border-glass {
+  @apply border-2 border-solid border-[rgba(255,255,255,0.2)];
+}
+
 ::-webkit-scrollbar {
   width: 0;
   background: transparent;
