--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,10 @@ body {
   background-color: var(--background);
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 .text-gradient {
   background: -webkit-linear-gradient(#ffffff, #07090e);
   -webkit-background-clip: text;
@@ -57,4 +61,22 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background-color: transparent;
+}
+
+.box {
+  width: 150px;
+  height: 150px;
+  border-radius: 1em;
+  background-color: #f9f07e;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.magic {
+  width: 200px;
+  height: 200px;
+  background-color: #fff;
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
