--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,7 @@ body {
 }
 
 .border-glass {
-  @apply border-2 border-solid border-[rgba(255,255,255,0.2)];
+  border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
 ::-webkit-scrollbar {
